--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -92,7 +92,7 @@ table.pending_tab tr:nth-child(even){background-color: #f2f2f2}
 .scrollbars{height: 283px; width: 100%;}
 .total_table_one table {border-collapse: collapse; border-spacing: 0; width: 100%; border: 1px solid #ddd; background: #FFF;}
 .total_table_one th{text-transform: uppercase; font-size: 14px; color: #FFF; text-align: left; padding: 8px; border: 1px solid #ddd;}
-.total_table_one td {text-align: left; padding: 8px; border: 1px solid #ddd; font-size: 15px;}
+.total_table_one td {text-align: left; padding: 8px; border: 1px solid #ddd; font-size: 13px;}
 .total_table_one tr:nth-child(even){background-color: #f5f5f5}
 
 .total_table{display: block; height: 400px; overflow-y: scroll;}
@@ -239,7 +239,7 @@ span.add_txt{display: block; font-size: 14px; font-weight: 700; text-align: left
 .listarea{ width:100%; float:left; /*padding:0px 10%;*/}
 .listarea ul{ width:100%; float:left; margin:0px; padding:0px;}
 .listarea li{ width:33.33%; float:left; margin:0px; padding:15px;}
-.listareaBox{width:100%; float:left; text-align:left; background:#ed1c24; padding:0 0 0 78px; position:relative; height:71px /*79px*/; color:#fff; border:3px solid #ed1c24;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
+.listareaBox{width:100%; float:left; text-align:left; background:#ed1c24; padding:0 0 0 78px; position:relative; height:71px /*79px*/; color:#fff; border:3px solid #eedfdf;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 .listareaBox:hover{ background:#fff;border:3px solid #dfdfdf;-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s;}
 .listareaBox img{ position:absolute; left: 0; top: 0; /*left:6px; top:4px;*/}
 .listareaBoximg{position:absolute; left:6px; top:4px;}
